# rgcp-middleware

./: .gitignore  CMakeLists.txt  README.md
src/: client.c  client.h  middleware.c  middleware.h  rgcp_middleware.c  rgcp_utils.h  rgcp_worker.c  rgcp_worker.h  rgcp_workerapi.c  rgcp_workerapi.h  system_headers.h
src/details/: api_packet.c  api_packet.h  arg_parser.c  arg_parser.h  crc32.h  linked_list.h  logger.c  logger.h  rgcp_group.c  rgcp_group.h  rgcp_middleware_group.c  rgcp_middleware_group.h
